plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/numericDivDuration.xpath2
4 div <error descr="Expected type 'xs:numeric', got 'xs:dayTimeDuration'">'P0DTOH' cast as xs:dayTimeDuration</error>